# TorchCPP1

./: .gitignore  CMakeLists.txt  README.md  main.cpp
